misc: renamed onecx-ai-svc to onecx-ai-management-svc

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,9 +15,9 @@ services:
       interval: 5s
       timeout: 10s
       retries: 5
-  onecx-ai-svc:
+  onecx-ai-management-svc:
 #    image: ghcr.io/onecx-apps/onecx-ai-svc:0.0.0-rc.1
-    image: localhost/onecx-ai-svc:999-SNAPSHOT
+    image: localhost/onecx-ai-management-svc:999-SNAPSHOT
     environment:
       QUARKUS_DATASOURCE_USERNAME: onecx_ai   
       QUARKUS_DATASOURCE_PASSWORD: onecx_ai      
