--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,7 +32,7 @@ quarkus.openapi-generator.codegen.spec.onecx_ai_svc_openapi_yaml.additional-api-
 %prod.quarkus.datasource.username=${DB_USER:onecx-ai}
 %prod.quarkus.datasource.password=${DB_PWD:onecx-ai}
 
-%prod.quarkus.rest-client.onecx_ai_svc.url=http://onecx-ai-svc:8080
+%prod.quarkus.rest-client.onecx_ai_svc.url=http://onecx-ai-management-svc:8080
 
 # DEV
 %dev.tkit.rs.context.tenant-id.enabled=true
