--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
         <version>0.72.0</version>
     </parent>
 
-    <artifactId>onecx-ai-svc</artifactId>
+    <artifactId>onecx-ai-management-svc</artifactId>
     <version>999-SNAPSHOT</version>
 
     <!--dependencyConvergence error diffrent version of okhttp3 -->
