fix: removed testdata and upgraded to quarkus 3.27.0

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,8 @@ quarkus.hibernate-orm.multitenant=DISCRIMINATOR
 quarkus.liquibase.migrate-at-start=true
 quarkus.liquibase.validate-on-migrate=true
 
+#deactivate dynmic security tests until security is added
+tkit.security-dynamic-test.openapi.enabled=false
 
 tkit.dataimport.enabled=false
 tkit.dataimport.configurations.chat.file=dev-data.import.json
