--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.tkit.onecx</groupId>
         <artifactId>onecx-quarkus3-parent</artifactId>
-        <version>0.72.0</version>
+        <version>2.2.0</version>
     </parent>
 
     <artifactId>onecx-ai-management-svc</artifactId>
@@ -138,11 +138,11 @@
             <version>2.6.2</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.tinylog</groupId>
-            <artifactId>slf4j-tinylog</artifactId>
-            <version>2.6.2</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.tinylog</groupId>-->
+<!--            <artifactId>slf4j-tinylog</artifactId>-->
+<!--            <version>2.6.2</version>-->
+<!--        </dependency>-->
 
         <!-- TEST -->
         <dependency>
