--- a/pom.xml
+++ b/pom.xml
@@ -112,7 +112,10 @@
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-opentelemetry</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-smallrye-fault-tolerance</artifactId>
+        </dependency>
         <!-- OTHER -->
         <dependency>
             <groupId>org.projectlombok</groupId>
