--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,13 @@ quarkus.hibernate-orm.multitenant=DISCRIMINATOR
 quarkus.hibernate-orm.jdbc.timezone=UTC
 quarkus.hibernate-orm.metrics.enabled=true
 
+# Microprofile Fault Tolerance
+quarkus.fault-tolerance."io.github.onecx.ai.common.services.llm.AbstractLlmService/executeToolRequestWithRetry".retry.max-retries=${onecx.ai.dispatch.mcp.max-tool-execution-retries}
+quarkus.fault-tolerance."io.github.onecx.ai.common.services.llm.AbstractLlmService/executeToolRequestWithRetry".retry.delay=${onecx.ai.dispatch.mcp.tool-execution-retry-delay}
+
+quarkus.fault-tolerance."io.github.onecx.ai.common.services.mcp.MCPService/receiveToolSpecifications".retry.max-retries=${onecx.ai.dispatch.mcp.max-tool-execution-retries}
+quarkus.fault-tolerance."io.github.onecx.ai.common.services.mcp.MCPService/receiveToolSpecifications".retry.delay=${onecx.ai.dispatch.mcp.tool-execution-retry-delay}
+
 quarkus.liquibase.migrate-at-start=true
 quarkus.liquibase.validate-on-migrate=true
 
